2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: Exclude appends / for directories before matching.
	* PatternSet.cc, PatternSet.h: match last directory components
	  in Glob::Match, e.g. abc/def/ghi.zip matches def/*.zip.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FileSet.cc, FileSet.h, FindJob.cc,
	  FindJob.h, GetFileInfo.cc, LocalAccess.cc, Makefile.am, MirrorJob.cc,
	  MirrorJob.h, NetAccess.cc, PatternSet.cc, PatternSet.h, commands.cc,
	  ftpclass.cc: (PatternSet) new class. Use it for exclude/include.
	* MirrorJob.cc: fixed session leak in case of options error.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: add forgotten SetError.
	* TimeDate.h: don't use time_t as operator arg, it confuses compaq c++.

2001-12-14  Albert Chin-A-Young <china@thewrittenword.com>

	* lftp_pty.c: add missing brace.
	* misc.cc: define unsetenv prototype if needed.

2001-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (OptimizePath) new method; optimize
	  path to cd to in ExpandTildeInCWD.
	* GetFileInfo.cc: try the file as directory even if showdir, to
	  return type info; use server returned error message; don't give up
	  if the file is not in FileSet; try directory to get error message
	  if we know from cache that there is no such file; try another
	  method only if we get NO_FILE error; strip all trailing slashes;
	  don't assume result!=0; don't descend to directory if showdir;
	  don't check verify_fn if was_directory; some xfree's added.
	* FileSetOutput.cc: don't print anything if GetFileInfo returned no set.
	* commands.cc: remove double Usage from chmod help.

2001-12-13  Glenn Maynard <g_ld@zewt.org>

	* ChmodJob.cc: cosmetics.
	* FindJob.cc: fix mem leak; fix status.
	* GetFileInfo.cc: move the ~ and / special case check after the initial
	  chdir.
	* NetAccess.cc: fix status message.

2001-12-13  Alexander V. Lukyanov <lav@yars.free.net>